--- a/index.html.html
+++ b/index.html.html
@@ -26,7 +26,7 @@
 
         <Card className="bg-blue-100">
           <CardContent className="p-4">
-            <h3 className="flex items-center gap-2 font-semibold">
+            <h3 className="flex items-center gap-2 font-semibold" style="brcolour:blue">
               <Recycle className="text-blue-700" /> Recyclable
             </h3>
            </CardContent>
@@ -40,5 +40,6 @@
           </CardContent>
         </Card>
       </div>
+
 
     
