--- a/index.html.html
+++ b/index.html.html
@@ -34,7 +34,7 @@
 
         <Card className="bg-red-100">
           <CardContent className="p-4">
-            <h3 className="flex items-center gap-2 font-semibold">
+            <h3 className="flex items-center gap-2 font-semibold"  style="brcolour:yellow" >
               <Trash2 className="text-red-700" /> Non-Recyclable
             </h3>
           </CardContent>
@@ -43,3 +43,4 @@
 
 
     
+
